objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Metric_Type__c</fullName>
        <label>Pricing Metric Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Inpatient Admissions</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Covered Lives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Count of Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Count of Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Surgical Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual PO Spend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Metrics__c</fullName>
        <label>Pricing Metrics</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <formula>Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Line__c</fullName>
        <formula>TEXT(Program__r.Program_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Contracts ABC</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <description>Short description of the project</description>
        <inlineHelpText>Short description of the project</inlineHelpText>
        <label>Project Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_of_LOA__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Receipt of LOA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <formula>IF(
	AND(
		NOT(ISNULL(Y1_Annual_Fee__c)),
		((Setup_in_Negotiated__c + Y1_Annual_Fee__c) != 0)
	),
	Y1_Annual_Fee__c  /  (  Setup_in_Negotiated__c  +  Y1_Annual_Fee__c  ),
	null
)</formula>
        <label>Renewable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp_Owner_2__c</fullName>
        <description>Updated formula in CR-20130912-3630 
From:  Contract_Renewal_Opportunity__r.Owner_Name__c

To: Contract_Renewal_Opportunity__r.Owner.FirstName + &apos; &apos; + Contract_Renewal_Opportunity__r.Owner.LastName</description>
        <formula>Contract_Renewal_Opportunity__r.Owner.FirstName + &apos; &apos; + Contract_Renewal_Opportunity__r.Owner.LastName</formula>
        <label>Renewal Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp_Status__c</fullName>
        <formula>TEXT(Contract_Renewal_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Opp Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Division__c</fullName>
        <formula>Text( Negotiated_By__r.Report_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Team__c</fullName>
        <formula>Text(Negotiated_By__r.Report_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Comments__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Risk Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Completed__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Risk Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Due_Date__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Risk Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_End__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Risk End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Negotiated_Amount__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Risk Negotiated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Start__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Risk Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_in_Negotiated__c</fullName>
        <label>Setup in Negotiated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solutions_Contract__c</fullName>
        <description>Created for CR-20160609-9911.</description>
        <formula>AND (
(Receipt_of_LOA__c &gt;= Payer_Account__r.Solution_Adopted__c),
OR (
ISBLANK(Payer_Account__r.Solution_Ended__c),
Payer_Account__r.Solution_Ended__c &gt;= Receipt_of_LOA__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract closed during Payer Account’s Solutions membership.</inlineHelpText>
        <label>Solutions Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>this field is deleted and not used for anything</description>
        <formula>&quot;Not Used&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deleted_Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <picklist>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Payment__c</fullName>
        <label>Termination Payment</label>
        <picklist>
            <picklistValues>
                <fullName>No Termination Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Termination Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25% of bal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30% of bal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35% of bal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40% of bal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45% of bal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% of bal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - See Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Counter__c</fullName>
        <formula>IF( ISNULL(Y2_PI__c), 0,1) + IF( ISNULL(Y3_PI__c), 0,1) + IF( ISNULL(Y4_PI__c), 0,1) + IF( ISNULL(Y5_PI__c), 0,1)</formula>
        <label>Total Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding__c</fullName>
        <description>Created for CR-20141218-8372</description>
        <formula>Net_Invoiced__c  - Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <description>Created for CR-20141218-8372</description>
        <formula>Amount_Credited_Total__c  - Credit_Note_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Travel__c</fullName>
        <label>Total Travel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unpaid_Contract_Amount__c</fullName>
        <description>Created for CR-20141218-8372</description>
        <formula>Negotiated_Amount__c  - Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unpaid Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Status__c</fullName>
        <description>Created for CR-20141218-8372.</description>
        <label>Unit Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y1_Annual_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Y1 Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_Annual_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Y2 Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_PI__c</fullName>
        <formula>IF(
	AND(Y1_Annual_Fee__c != 0,
        Y2_Annual_Fee__c != 0),
	((Y2_Annual_Fee__c /Y1_Annual_Fee__c)  - 1), 
	null
)</formula>
        <label>Y2 PI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y3_Annual_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Y3 Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_PI__c</fullName>
        <formula>IF(
	AND(Y2_Annual_Fee__c != 0,
       Y3_Annual_Fee__c != 0), 
	((Y3_Annual_Fee__c /Y2_Annual_Fee__c)  - 1), 
	null
)</formula>
        <label>Y3 PI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y4_PI__c</fullName>
        <formula>IF(
	AND(Y3_Annual_Fee__c != 0,
       Y4_Annual_Fee__c != 0), 
	((Y4_Annual_Fee__c /Y3_Annual_Fee__c)  - 1), 
	null
)</formula>
        <label>Y4 PI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2_PI__c</fullName>
        <label>Year 2 PI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_3_PI__c</fullName>
        <label>Year 3 PI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_4_PI__c</fullName>
        <label>Year 4 PI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_One_Fees__c</fullName>
        <label>Year One Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Year</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_in_Term__c</fullName>
        <label>Years in Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract ABC</label>
    <listViews>
        <fullName>Change_Invoice_Contact4</fullName>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Invoice_Billing_Schedule__c</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Baptist</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>10/11/2016</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <label>Change Invoice Contact</label>
    </listViews>
    <listViews>
        <fullName>Change_Invoice_Contact_CHICK_VIEW</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Y1_Annual_Fee__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>East Kent Hospitals University NHS Foundation Trust - C - CIHI - 2014</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2016</value>
        </filters>
        <label>Change Invoice Contact - CHICK VIEW</label>
        <sharedTo>
            <group>Financial_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Invoice_Contact_Duff_VIEW1</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Y1_Annual_Fee__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Houston Methodist</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2016</value>
        </filters>
        <label>Change Invoice Contact - Duff VIEW</label>
        <sharedTo>
            <group>Financial_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Invoice_Contact_FLO_VIEW</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Y1_Annual_Fee__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Cardiovascular Care Group</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2015</value>
        </filters>
        <label>Change Invoice Contact - FLO VIEW</label>
        <sharedTo>
            <group>Financial_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Invoice_Contact_LAMBERT_VIEW</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Y1_Annual_Fee__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>mayo clinic</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>8/30/2016</value>
        </filters>
        <label>Change Invoice Contact - LAMBERT VIEW</label>
        <sharedTo>
            <group>Financial_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Change_Invoice_Contact_Lanaya_1</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <columns>Total_Unpaid_Contract_Amount__c</columns>
        <columns>Program__c</columns>
        <columns>New_Business_Vertical__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Total_Outstanding__c</columns>
        <columns>Invoice_Total__c</columns>
        <columns>Invoice_Billing_Schedule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Tarleton State University</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>12/30/2015</value>
        </filters>
        <label>Change Invoice Contact - Lanaya 1</label>
    </listViews>
    <listViews>
        <fullName>Current_Membership_View</fullName>
        <columns>NAME</columns>
        <columns>Payer_Account__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <columns>Annual_Contract_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payer_Account__c</field>
            <operation>startsWith</operation>
            <value>Mountain States</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <label>Current Membership View</label>
    </listViews>
    <listViews>
        <fullName>Current_Membership_View1</fullName>
        <columns>NAME</columns>
        <columns>Payer_Account__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <columns>Annual_Contract_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payer_Account__c</field>
            <operation>startsWith</operation>
            <value>Presbyterian Healthcare Services - Albuquerque - NM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL,Honorary</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Start__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Current Membership View</label>
    </listViews>
    <listViews>
        <fullName>KS_Currency_Check</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Contact__c</columns>
        <columns>Main_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Currency__c</field>
            <operation>equals</operation>
            <value>QAR - Qatar Rial</value>
        </filters>
        <label>KS Currency Check</label>
    </listViews>
    <listViews>
        <fullName>Membership_History_View</fullName>
        <columns>Counter_ID__c</columns>
        <columns>Payer_Account__c</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Negotiated_Amount__c</columns>
        <columns>Annual_Contract_Value__c</columns>
        <columns>NAME</columns>
        <columns>Contract_Renewal_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>baptist health louisville</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL</value>
        </filters>
        <label>Griffin</label>
        <sharedTo>
            <role>FinOpsAnalyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pricing_Metric</fullName>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Source_Opportunity__c</columns>
        <columns>Renewal_Opp_Owner_2__c</columns>
        <columns>Pricing_Metrics__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>ATL</value>
        </filters>
        <filters>
            <field>Program_Acronym__c</field>
            <operation>equals</operation>
            <value>BIPAE,BIPAI,BICQ,BICR</value>
        </filters>
        <filters>
            <field>End__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2015</value>
        </filters>
        <label>Pricing Metric</label>
    </listViews>
    <listViews>
        <fullName>Test1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>#Audit - Pending Contracts</label>
        <sharedTo>
            <role>FinOpsAnalyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>year_one_fees</fullName>
        <columns>NAME</columns>
        <columns>Year_One_Fees__c</columns>
        <columns>Receipt_of_LOA__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Receipt_of_LOA__c</field>
            <operation>greaterThan</operation>
            <value>1/6/2012</value>
        </filters>
        <filters>
            <field>Year_One_Fees__c</field>
            <operation>equals</operation>
        </filters>
        <label>year one fees</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts ABC</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Before_Contract_ABC_can_be_created</fullName>
        <active>true</active>
        <description>The parent record of program is Contract LOA and stage is Closed Won.</description>
        <errorConditionFormula>And(BEGINS( Source_Opportunity__r.RecordType.Name, &quot;Program&quot;),

 Source_Opportunity__r.Parent_Opportunity__r.RecordType.Name = &quot;Contract LOA&quot;,

Source_Opportunity__r.Parent_Opportunity__r.SBQQ__Contracted__c = True,

NOT (ISPICKVAL(Source_Opportunity__r.StageName, &quot;Closed Won&quot;)))</errorConditionFormula>
        <errorMessage>Before a Contract ABC can be created, the parent record of program needs to equal Contract  LOA and the Stage needs to equal Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_Not_USD_Require_Exchange_Rate</fullName>
        <active>true</active>
        <description>If contract currency is not USD, then require exchange rate.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Contract_Currency__c, &quot;USD&quot;))
&amp;&amp;
ISBLANK(Exchange_Rate__c)</errorConditionFormula>
        <errorDisplayField>Exchange_Rate__c</errorDisplayField>
        <errorMessage>Exchange Rate required when Contract Currency not USD.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opt_Out_Date</fullName>
        <active>false</active>
        <description>Inactive. If Opt-Out Type is Service Quality Guarantee, ROI Opt Out, Annual Opt Out then the Opt-Out Date must be populated.</description>
        <errorConditionFormula>OR( ISPICKVAL( Opt_Out_Type__c , &quot;Service Quality Guarantee&quot;)   ,  ISPICKVAL( Opt_Out_Type__c , &quot;ROI Opt Out&quot;),  ISPICKVAL( Opt_Out_Type__c , &quot;Annual Opt Out&quot;))  &amp;&amp; ISBLANK( Opt_Out_Date__c)</errorConditionFormula>
        <errorMessage>Please populate Opt Out Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Opt_Out_Date</fullName>
        <active>true</active>
        <description>If Opt-Out Type is Service Quality Guarantee, ROI Opt Out, Annual Opt Out then the Opt-Out Date must be populated.</description>
        <errorConditionFormula>OR(ISPICKVAL( Opt_Out_Type__c , &quot;Service Quality Guaranteed&quot;), ISPICKVAL( Opt_Out_Type__c , &quot;ROI Opt Out&quot;) , ISPICKVAL( Opt_Out_Type__c , &quot;Annual Opt Out&quot;))  &amp;&amp; ISBLANK( Opt_Out_Date__c )</errorConditionFormula>
        <errorMessage>A date is required in Opt Out Date when Opt Out Type is SQG, ROI Opt Out, or Annual Opt Out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_ATL_or_Honorary_Require_Fields</fullName>
        <active>true</active>
        <description>If status is ATL or Honorary then Negotiated amount, type, start, end, year, program, join date, payer account, main contact, invoice contact are all required fields</description>
        <errorConditionFormula>(
Start__c &gt;= DATE(2011,3,24)
)&amp;&amp;
( 
ISPICKVAL(Status__c, &quot;ATL&quot;) || ISPICKVAL(Status__c, &quot;Honorary&quot;) 
) &amp;&amp; $Profile.Name != &apos;System Administrator&apos; 
&amp;&amp; 
( 
ISBLANK(Negotiated_Amount__c) || 
ISBLANK(TEXT(Type__c)) || 
ISBLANK(Start__c) || 
ISBLANK(End__c) || 
ISBLANK(Year__c) || 
ISBLANK(Program__c) || 
ISBLANK(Join_Date__c) || 
ISBLANK(Payer_Account__c) || 
ISBLANK(Main_Contact__c) || 
ISBLANK(Invoice_Contact__c) 
)</errorConditionFormula>
        <errorMessage>When status is ATL or Honorary the following fields are required: Negotiated Amount, Type, Start, End, Year, Program, Join Date, Payer Account, Main Contact, and Invoice Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateStartDateAndEndDate</fullName>
        <active>true</active>
        <description>End date should be always greater than or equals to start date.</description>
        <errorConditionFormula>End__c  &lt; Start__c</errorConditionFormula>
        <errorMessage>The End Date cannot be before the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Opt_Out_Date</fullName>
        <active>true</active>
        <description>Added in CR-20151202-9434.</description>
        <errorConditionFormula>AND(ISPICKVAL(Term_Type__c, &apos;Opt Out&apos;),  ISBLANK( Opt_Out_Date__c))</errorConditionFormula>
        <errorDisplayField>Opt_Out_Date__c</errorDisplayField>
        <errorMessage>You must enter a value.</errorMessage>
    </validationRules>
</CustomObject>